--- a/form.html
+++ b/form.html
@@ -1,81 +1,47 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
-  <meta charset="UTF-8">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Form</title>
-
-<head> 
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document title</title>
+</head>
 
 <body>
+	<form>
+		<label for="username">Enter your Username</label>
+		<input type="text" name="username" id="username" placeholder="Enter your name" required>
+		<br><br>
 
-  <form>
+		<label for="email">Enter your email</label>
+		<input type="email" name="email" id="email" placeholder="Enter your email" required>
+		<br><br>
 
-  <label for="username">Enter Your Username<label>
+		<label for="password">Enter your password</label>
+		<input type="password" name="password" id="password" required>
+		<br><br>
 
-  <input type="text" name="username" id="username"
+		<input type="radio" name="gender" value="male" id="male">
+		<label for="male">male</label>
+		<input type="radio" name="gender" value="female" id="female">
+		<label for="female">female</label>
+		<br><br>
 
-  placeholder="Enter your name" required>
+		<label for="fruit">Types of fruit</label>
+		<select name="fruit" id="fruit">
+			<option value="apple">Apple</option>
+			<option value="banana">Banana</option>
+			<option value="orange">Orange</option>
+		</select>
+		<br><br>
 
-  <br><br>
+		<label for="desc">Your description</label>
+		<br>
+		<textarea name="desc" id="desc" cols="50" rows="10" placeholder="minimum of 100 characters"></textarea>
+		<br>    
 
-  <label for="email">Enter Your emaillabel>
+		<input type="submit" value="Submit Form">
+	</form>
+</body>
 
-  <input type="email" name="email" id="email"
-
-  placeholder="Enter your name" required>
-
-  <br><br>
-
-  <label for="password">Enter Your password<label>
-
-  <input type="password" name="password" id="password">
-
-
-
-  <br><br>
-
-  <input type="radio" name="gender" value="male" id="male">
-
-  <label for="male">malelabel>
-
-  <input type="radio" name="gender" value="female" id="female">
-
-  <label for="female">femalelabel>
-
-  <br><br>
-
-  <label for="fruit">Types of fruit<label>
-
-  <select name="fruit" id="fruit">
-
-    <option value="apple">Apple<option>
-
-    <option value="banana">banana<option>
-
-    <option value="orange">orange<option>
-
-  <select>
-
-  <label for="desc">our decription<label>
-
-  <br>
-
-  <textarea name="desc" id="desc" cols="50" rows="10"
-
-  placeholder="minimum of 100 characters"><textarea>
-
-  <br>
-
-  <input type="submit" value="Submit Form">
-
-  <form>
-
-<body>
-
-<html>
+</html>
